# auditcli

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  README.md  SVELTEKIT_INTEGRATION.md  pyproject.toml
app/: __init__.py  main.py
app/api/v1/: __init__.py  deps.py
app/api/v1/routes/: audits.py  cache.py  health.py  websocket.py
app/config/: __init__.py  settings.py
app/core/: ai.py  audit.py  lighthouse.py  psi.py
app/errors/: __init__.py  exceptions.py
app/schemas/: audit.py  common.py  job.py
app/services/: browser_pool.py  cache.py  circuit_breaker.py  concurrency.py  jobs.py  queue.py  validators.py  websocket.py
scripts/: postinstall.py
src/: ai.py  audit.py  cache.py  errors.py  lighthouse.py  main.py  models.py  psi.py
tests/: conftest.py  test_metrics_extraction.py  test_psi.py
tests/api/: test_audit_endpoints.py
tests/core/: test_lighthouse.py
tests/fixtures/: lighthouse.json
tests/services/: test_concurrency.py  test_psi.py  test_websocket.py
