[project]
name = "auditcli"
version = "0.1.0"
description = "Simple web audit CLI - returns JSON with Lighthouse, CrUX, and AI insights"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
auditcli = "src.main:main"
